k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rapid-minutes-export-service
  namespace: rapid-minutes
  labels:
    app: rapid-minutes-export
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: rapid-minutes-export
